--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 $function_mobileOnly: false;
 $color:#b9381f;
+$colorp: #6c2420;
 $common_font:400 14px/2 "Helvetica Neue",
 Helvetica,
 "PingFang SC",
