--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -68,6 +68,7 @@
 .adlinks {
     img {
         width: 100%;
+        display: block;
     }
 }
 
@@ -97,16 +98,9 @@
     padding: 16px 0;
 
     .item {
-        display: block;
         white-space: nowrap;
-        overflow: hidden;
-        position: relative;
-        padding: 16px;
         margin: 16px 0;
         background: #ece9e9;
-        border-radius: 8px;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-
         .img {
             height: 150px;
             width: 200px;
@@ -116,6 +110,7 @@
         }
 
         .obj {
+            height: 150px;
             overflow: hidden;
 
             .tit {
@@ -146,10 +141,6 @@
                     margin-left: 16px;
                 }
             }
-        }
-
-        &:hover {
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
     }
 }
