--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import "var.scss";
+@import "function.scss";
 @import "reset.scss";
 @import "swiper.scss";
-@import "common.scss"; 
+@import "common.scss";
 @import "main.scss";
