--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -507,3 +507,16 @@
         }
     }
 }
+
+html,
+body,
+#app {
+    height: 100%;
+    width: 100%;
+}
+
+.main {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
