--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -1,18 +1,6 @@
 @charset "UTF-8";
-$function_mobileOnly: false;
 $color:#b9381f;
 $colorp: #6c2420;
-$common_font:400 14px/2 "Helvetica Neue",
-Helvetica,
-"PingFang SC",
-"Hiragino Sans GB",
-"Microsoft YaHei",
-"Arial",
-"sans-serif";
-$common_body_background: #fff;
-$common_body_color: #333;
-$common_color_link: #333;
-$common_color_linkTapHighlight: rgba(0, 0, 0, .1);
 
 .icon-alipay {
     color: #419ee3;
@@ -20,4 +8,8 @@ $common_color_linkTapHighlight: rgba(0, 0, 0, .1);
 
 .icon-weixinzhifu {
     color: #55b737;
+}
+
+.page {
+    font: 400 14px/1.5 "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Arial", "sans-serif";
 }
