--- a/src/assets/theme/iview.less
+++ b/src/assets/theme/iview.less
@@ -1,4 +1,6 @@
 @import "~iview/src/styles/index.less";
-
 @primary-color: #b9381f;
 @link-color: @primary-color;
+@menu-dark-title: #001529 !important;
+@menu-dark-active-bg: #000c17 !important;
+@layout-sider-background: #001529 !important;
