--- a/src/layouts/manager/main.less
+++ b/src/layouts/manager/main.less
@@ -3,17 +3,18 @@
     height: 64px;
     padding: 16px;
     text-align: center;
-    line-height: 32px;
     color: #fff;
-    font-size: 16px;
+    font-size: 20px;
+    background: #002140;
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
     img {
-      vertical-align: middle;
       height: 32px;
-      display: inline-block;
     }
     div {
       margin: 0 16px;
-      display: inline-block;
+      line-height: 32px;
     }
   }
   .header-con {
