--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -4,6 +4,10 @@
     overflow-x: hidden;
 }
 
+.ivu-carousel-dots li button {
+    background-color: $color !important;
+}
+
 .kt {
     color: #000;
     font-family: 'STKaiti', 'KaiTi' !important;
@@ -24,7 +28,8 @@
 }
 
 .inner {
-    width: 1170px;
+    width: 1200px;
+    padding: 0 15px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -58,7 +63,7 @@
         width: 540px;
 
         .card {
-            min-height: 320px;
+            height:450px;
             background: #fff;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -79,7 +84,7 @@
             }
 
             .info {
-                height: 316px;
+                height: 340px;
                 overflow-y: auto;
 
                 .items {
@@ -168,7 +173,7 @@
 
             .form {
                 background: #ece9e9;
-                padding: 8px;
+                padding:10px 8px;
                 position: relative;
 
                 .ipt {
