--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -1,3 +1,17 @@
+html,
+body,
+#app {
+    height: 100%;
+    width: 100%;
+}
+
+.main {
+    height: 100%;
+    width: 100%;
+    min-height: 1080px;
+    overflow: hidden;
+}
+
 .page {
     position: relative;
     min-width: 1170px;
@@ -13,18 +27,8 @@
     font-family: 'STKaiti', 'KaiTi' !important;
 }
 
-.act {
+.link {
     cursor: pointer;
-}
-
-.ivu-page {
-    text-align: center;
-    padding: 16px;
-}
-
-.icon {
-    line-height: inherit;
-    font-size: inherit;
 }
 
 .inner {
@@ -35,6 +39,9 @@
 }
 
 .icon {
+    line-height: inherit;
+    font-size: inherit;
+
     &+span {
         padding: 0 4px;
     }
@@ -47,31 +54,7 @@
     }
 }
 
-.actions {
-    .btn {
-        background: $color;
-        color: #fff;
-        line-height: 32px;
-        text-align: center;
-        border-radius: 4px;
-
-        &.round {
-            border-radius: 16px;
-        }
-    }
-}
-
-
-html,
-body,
-#app {
-    height: 100%;
-    width: 100%;
-}
-
-.main {
-    height: 100%;
-    width: 100%;
-    min-height: 1080px;
-    overflow: hidden;
+.ivu-page {
+    text-align: center;
+    padding: 16px;
 }
